# quiz_bot

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  setup.cfg
bots/: tg_bot.py
